Fix z-index clipping issue with the “Specimen” banner

--- a/client/styles/readmycards/rmc.less
+++ b/client/styles/readmycards/rmc.less
@@ -478,7 +478,7 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 999;
   visibility: hidden;
   width: 300px;
   height: 100%;
